--- a/personal.css
+++ b/personal.css
@@ -23,6 +23,13 @@
   align-items: center;
 }
 
+.quiz-wrapper img {
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .quiz-wrapper #question {
   font-size: 45px;
   font-weight: 600;
@@ -40,6 +47,10 @@
     font-weight: 600;
     width: auto;
     margin-top: 220px;
+  }
+
+  .modal-content-container {
+    width: 10px;
   }
 }
 
@@ -62,8 +73,8 @@
 }
 
 .modal-content-container {
-  height: 20rem;
-  width: 25rem;
+  height: 30rem;
+  width: 35rem;
   background-color: rgb(249, 247, 124);
   display: flex;
   flex-direction: column;
