--- a/personal.css
+++ b/personal.css
@@ -11,49 +11,6 @@
   font-family: "Tilt Neon", sans-serif;
 }
 
-.container {
-  max-width: 100%;
-  background: url("img/bg-personal.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 100% 50%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.quiz-wrapper img {
-  max-width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.quiz-wrapper #question {
-  font-size: 45px;
-  font-weight: 600;
-  width: 500px;
-  margin-bottom: 20px;
-}
-
-@media (max-width: 768px) {
-  .container {
-    background-position: 50% 10%;
-  }
-
-  .quiz-wrapper #question {
-    font-size: 45px;
-    font-weight: 600;
-    width: auto;
-    margin-top: 220px;
-  }
-
-  .modal-content-container {
-    width: 10px;
-  }
-}
-
 .modal-container {
   display: none;
   position: fixed;
@@ -73,114 +30,27 @@
 }
 
 .modal-content-container {
-  height: 30rem;
-  width: 35rem;
+  height: 35rem;
+  width: 40rem;
   background-color: rgb(249, 247, 124);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   border-radius: 25px;
-}
-
-.modal-content-container h1 {
-  font-size: 1.3rem;
-  height: 3rem;
-  color: black;
-  text-align: center;
-}
-
-.modal-button-container {
-  height: 2rem;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal-button-container button {
-  width: 10rem;
-  height: 2rem;
-  background: black;
-  outline: none;
-  color: white;
-  font-size: 1.1rem;
-  cursor: pointer;
-  border-radius: 20px;
-  transition: all 0.2s ease-in-out;
-}
-.modal-button-container button:hover {
-  background-color: rgb(83, 82, 82);
-  transform: scale(1.1);
-}
-
-.btn-answer {
-  padding: 15px 40px;
-  border-radius: 20px;
-  border: none;
-  background: rgb(159, 251, 153);
-  background: linear-gradient(
-    20deg,
-    var(--hijau-muda) 0%,
-    var(--hijau-tua) 100%
-  );
-  color: white;
-  font-size: 20px;
-  font-weight: 700;
-  border: 4px solid rgb(255, 255, 233);
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-
-.btn-answer:hover {
-  transform: scale(1.1);
-}
-
-.btn-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn-section button {
-  margin: 0px 10px;
+  padding: 50px;
 }
 
 @media (max-width: 768px) {
-  .container {
-    background-position: 50% 100%;
-  }
-  .btn-section {
-    margin-top: 100px;
-    text-align: center;
-    display: block;
-    justify-content: center;
-    align-items: center;
+  .modal-content-container {
+    height: 100vh;
+    width: 35rem;
   }
 
-  .btn-section button {
-    margin-top: 10px;
-  }
-
-  .btn-answer {
-    padding: 15px 40px;
-    border-radius: 20px;
-    border: none;
-    background: rgb(159, 251, 153);
-    background: linear-gradient(
-      45deg,
-      var(--hijau-muda) 0%,
-      var(--hijau-tua) 100%
-    );
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    border: 4px solid rgb(255, 255, 246);
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-  }
-
-  .btn-answer:hover {
-    transform: scale(1.1);
+  .bg-personal {
+    background-image: url("img/bg-home.png");
+    background-size: cover;
+    background-position: 100% 50%;
+    background-repeat: no-repeat;
   }
 }
