--- a/personal.css
+++ b/personal.css
@@ -30,8 +30,11 @@
 }
 
 .modal-content-container {
+  background-image: url("./img/bg-deskripsi.png");
+  background-size: cover;
+  background-position: 60% 100%;
   height: 35rem;
-  width: 40rem;
+  width: 30rem;
   background-color: rgb(249, 247, 124);
   display: flex;
   flex-direction: column;
